# ingot

./: .dockerignore  .gitignore  .mise.toml  Dockerfile  Dockerfile.manual  LICENSE  README.md  conan_clang_profile  conanfile.py  conanfile.txt  meson.build  mise.toml  mkdocs.yml  wrangler.jsonc
docs/: api.md  getting-started.md  index.md  security.md
include/ingot/: keccak.hpp  rlp.hpp  secure_zero.hpp  signing.hpp  transaction.hpp  types.hpp  units.hpp
src/: keccak.cpp
subprojects/: libsecp256k1.wrap
subprojects/packagefiles/libsecp256k1/: meson.build
tests/: meson.build  test_cross_validate.cpp  test_signing.cpp  test_units.cpp
tests/alloy_compare/: Cargo.toml
tests/alloy_compare/src/: main.rs
tests/viem_compare/: compare.ts  package-lock.json  package.json
